# 10plus1-protocol-server

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  MASTER_INDEX.md  MEMORY.md  PATTERNS.md  README.md  dashboard_main.py  docker-entrypoint.sh  pyproject.toml  smoke_test.py
PHASES/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md
knowledge_base/: 10p1_standard_v01.docx  10p1_translation_of_principles.docx  cooperation_ceiling_analysis.docx  finite_agent_protocol.md  handshake_protocol_testing_report.docx  moltbook_experiment_report_FINAL.docx
scripts/: seed_demo.py
src/dashboard/: app.py  data.py
src/dashboard/routes/: api.py  pages.py
src/dashboard/templates/: activity.html  agents.html  base.html  handshake_detail.html  handshakes.html  index.html
src/declaration/: builder.py  embedder.py
src/dispositioner/: engine.py  ror_tracker.py
src/event_viewer/: writer.py
src/handshake/: manager.py  session.py
src/mcp_server/: app.py  service.py
src/persistence/: __init__.py  base.py  event_viewer_backend.py  sqlite_backend.py
src/reporting/: exporter.py  journal.py  ror_persistence.py
src/schema/: declaration.py  disposition.py  event.py
src/signer/: signer.py
src/validator/: principle_map.py  validator.py
tests/unit/: test_builder.py  test_dashboard.py  test_dispositioner.py  test_embedder.py  test_handshake.py  test_mcp_tools.py  test_reporting.py  test_ror_tracker.py  test_schema.py  test_signer.py  test_sqlite_backend.py  test_validator.py
